Hard Password Update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
 
     <div class="pas-btn">
-        <button class="btn btn1" onclick="Passfunc()">Generate password</button>
+        <button class="btn btn1" onclick="Passfunc()">Generate <b>normal</b> password</button>
+        <button class="btnsec btn2" onclick="Passhardfunc()">Generate <b>hard</b> password</button>
     </div>
 
 
