--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     </div>
 
 
+    <div class="advise">
+        <p>Always write down your passwords!</p>
+    </div>
+
+
 
     <script src="app.js"></script>
 
